Source/WebCore/css/CSSPrimitiveValue.cpp
@@ -600,6 +600,10 @@ double CSSPrimitiveValue::computeLengthDouble(const RenderStyle* style, const Re
         case CSS_CALC_PERCENTAGE_WITH_NUMBER:
             ASSERT_NOT_REACHED();
             return -1.0;
+        case CSS_VH:
+        case CSS_VW:
+            factor = 1.0;
+            break;
         default:
             ASSERT_NOT_REACHED();
             return -1.0;
